; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_umask.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_fs.c_sys_umask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.fs_info* }
%struct.fs_info = type { i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"umask(0%o)\00", align 1
@current = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_umask(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fs_info*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @STRACE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.fs_info*, %struct.fs_info** %8, align 8
  store %struct.fs_info* %9, %struct.fs_info** %3, align 8
  %10 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %11 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %10, i32 0, i32 1
  %12 = call i32 @lock(i32* %11)
  %13 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %14 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %16, 511
  %18 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %19 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load %struct.fs_info*, %struct.fs_info** %3, align 8
  %21 = getelementptr inbounds %struct.fs_info, %struct.fs_info* %20, i32 0, i32 1
  %22 = call i32 @unlock(i32* %21)
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i32 @STRACE(i8*, i32) #1

declare dso_local i32 @lock(i32*) #1

declare dso_local i32 @unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
